# TrimeshVtk

./: README.md  pyproject.toml  setup.cfg
docs/: conf.py  index.rst  intro.rst
docs/api/: modules.rst  trimesh_vtk.rst
scripts/: release.sh
tests/: trimesh_vtk_test.py
trimesh_vtk/: __init__.py
